src/objects/Harvest_Task_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_at__c</fullName>
        <label>Harvest Record created at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hourly_rate__c</fullName>
        <label>Hourly rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <externalId>true</externalId>
        <label>Project Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Harvest_Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Harvest_Task_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <externalId>true</externalId>
        <label>Task Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>Harvest_Task__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Harvest_Task_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Updated_at__c</fullName>
        <label>Harvest Record updated at</label>
        <type>DateTime</type>
    </fields>
    <label>Harvest Task Assignment</label>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>Harvest Task Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvest Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>